# schedsync-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  docs.md
migrations/postgres/2024-06-13-162848_create_apps/: down.sql  up.sql
migrations/postgres/2024-06-13-162852_create_groups/: up.sql
migrations/postgres/2024-06-13-165746_create_integrations/: down.sql  up.sql
migrations/postgres/2024-06-13-170837_create_app_keys/: down.sql  up.sql
migrations/postgres/2024-06-13-181212_create_oauth_integrations/: down.sql  up.sql
migrations/postgres/2024-10-22-232653_create_oauth2_states/: down.sql  up.sql
src/: config.rs  db.rs  lib.rs  main.rs  schema.rs  test_util.rs
src/connectors/: mod.rs
src/connectors/caldav/: caldav.rs  mod.rs
src/connectors/oauth2/: google.rs  mod.rs  outlook.rs
src/controllers/: group.rs  mod.rs  oauth2.rs
src/middleware/: mod.rs
src/models/: app.rs  app_key.rs  calendar.rs  group.rs  integration.rs  mod.rs  oauth2_state.rs  oauth_integration.rs
tests/: caldav_test.rs  group_test.rs  test_xml.rs
tests/common/: mod.rs  test_config.rs
